--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootcamp-reminder",
+  "name": "discord-reminder",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
